--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "stop-me-if-you-can": {
+    "city-run": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/stop-me-if-you-can",
+            "outputPath": "dist/city-run",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "stop-me-if-you-can:build"
+            "browserTarget": "city-run:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "stop-me-if-you-can:build:production"
+              "browserTarget": "city-run:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "stop-me-if-you-can:build"
+            "browserTarget": "city-run:build"
           }
         },
         "test": {
@@ -110,15 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "stop-me-if-you-can:serve"
+            "devServerTarget": "city-run:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "stop-me-if-you-can:serve:production"
+              "devServerTarget": "city-run:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "stop-me-if-you-can"
+    }
+  },
+  "defaultProject": "city-run",
+  "cli": {
+    "analytics": "fef5a073-4d4c-44de-a92b-b46eb7e94b7a"
+  }
 }
